--- a/index.org
+++ b/index.org
@@ -63,22 +63,25 @@ http://repo.or.cz/w/org-mode.git
      these seem to be out of date.
 
 * Documentation
-** Manual and Reference card
+** The Org manual
    - Read the documentation [[file:manual/index.html][online]].  This is a version consisting of many
-     small files, to save bandwidth.  If you really need it, you can also
-     have the entire manual in a [[file:org.html][single monolithic file]].
+     small files, to save bandwidth.  
+   - If you really need it, you can also have the entire manual in a
+     [[file:org.html][single monolithic file]].
    - Download the documentation in other formats: [[file:org.pdf][PDF]], [[file:org][Info]], or [[file:org.texi][TeXInfo]].
-   - Download the [[file:orgcard.pdf][Refcard]] for org-mode, and Kyle Sherman hast created a
-     [[file:orgcard.txt][text version]] of the reference card
    - There is also a [[http://hpcgi1.nifty.com/spen/index.cgi?OrgMode%2fManual][Japanese translation]] of the manual (version 4.60),
      produced by Takeshi Okano.
-   - The [[http://orgmode.org/worg/org-faq.php][Org Mode FAQ]] is
-     maintained by the Worg project.
    - The Org manual is a GNU Manual released under the GFDL.  If you
      want to redistribute Org with a distribution that does not allow
      the GFDL to be used, and if you see no other way to resolve this
      licensing conflict, you must use the special [[file:org_dual_license.texi][dual-license version]]
      of the manual.
+** Reference card
+   - Download the [[file:orgcard.pdf][Refcard]] for org-mode
+   - Kyle Sherman has created a [[file:orgcard.txt][text version]] of the reference card
+     (Org version 4.79).
+** The FAQ
+   - The [[http://orgmode.org/worg/org-faq.php][Org Mode FAQ]] is user-editable and is maintained by the [[http://orgmode.org/worg/][Worg project]].
 
 * Links
 
