Put the survey results under org-info.js.

--- a/survey.org
+++ b/survey.org
@@ -3,6 +3,9 @@
 #+EMAIL:     charles.cave@gmail.com
 #+LANGUAGE:  en
 #+OPTIONS:   H:3 num:nil toc:1 \n:nil @:t ::t |:t ^:t -:t f:t *:t TeX:t LaTeX:nil skip:t d:nil tags:not-in-toc
+#+INFOJS_OPT: view:info toc:1 path:org-info.js tdepth:1 ftoc:t
+#+LINK_UP: index.html
+#+LINK_HOME: http://orgmode.org
 
 * Survey introduction
 
