--- a/index.org
+++ b/index.org
@@ -125,11 +125,7 @@ contribute your own setup, screenshots, tutorials etc, please go to
    In November 2007, Charles Cave organized a survey among Org-mode
    users.  The answers given in this survey can be found [[file:survey.html][here]].
 
-** Org-mode, GTD and other task management systems 
-    Org-mode is flexible enough to implement many different ways of
-    organizing your projects.  For links and pointers in this area,
-    see the [[http://orgmode.org/worg/org-gtd-etc.php][Worg page dedicated to task management systems]].
-
+** GTD & Co
 ** Contributing to Org-mode
 
    You can always contribute with ideas and bug reports on the mailing
