--- a/index.org
+++ b/index.org
@@ -66,8 +66,11 @@ has been posted [[http://www.philfam.co.uk/pete/GTD/org-mode/update-org.sh][here
 ** The development version
 
 You can check out the latest Org development version (along with every
-release we ever had) by using git.  More information on this page:
-http://repo.or.cz/w/org-mode.git
+release we ever had) by using git.  The git repository is [[http://repo.or.cz/w/org-mode.git][browsable
+online]].  To get a local clone use something like the following (from
+the command line....):
+
+: git clone git://repo.or.cz/w/org-mode.git
 
 ** Alternative distributions
 
