--- a/GoogleTech.org
+++ b/GoogleTech.org
@@ -13,4 +13,7 @@ Here it the video of the Google Tech Talk about Org-mode that I gave on July 15t
 <object width="425" height="349"><param name="movie" value="http://www.youtube.com/v/oJTwQvgfgMM&hl=en&fs=1&rel=0&border=1"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/oJTwQvgfgMM&hl=en&fs=1&rel=0&border=1" type="application/x-shockwave-flash" allowfullscreen="true" width="425" height="349"></embed></object>
 #+END_HTML
 
-You can also just download the slides as a [[file:Google-Tech-Talk-Org-mode.pdf][PDF file]] file or as a [[file:Google-Tech-Talk-Org-mode.swf][flash movie]].
+For projection purposes you can also download the slides as a [[file:Google-Tech-Talk-Org-mode.pdf][PDF
+file]] file or as a [[file:Google-Tech-Talk-Org-mode.swf][flash movie]].  If you'd like to prepare your own talk
+about Org-mode and want to use some of my slides, here are the
+[[file:Google-Tech-Talk-Org-mode-keynote.zip][Apple keynote]] and [[file:Google-Tech-Talk-Org-mode.ppt][Microsoft Powerpoint]] versions of the talk.
