--- a/index.org
+++ b/index.org
@@ -67,10 +67,10 @@ has been posted [[http://www.philfam.co.uk/pete/GTD/org-mode/update-org.sh][here
 
 You can check out the latest Org development version (along with every
 release we ever had) by using git.  The git repository is [[http://repo.or.cz/w/org-mode.git][browsable
-online]].  To get a local clone use something like the following (from
+online]].  To get a local clone use something like the following (from 
 the command line....):
 
-: git clone git://repo.or.cz/w/org-mode.git
+: git clone git://repo.or.cz/org-mode.git
 
 ** Alternative distributions
 
