Fix bug with recursive publishing and the publishing directory.
This one has haunted us for a long time......

--- a/Changes.org
+++ b/Changes.org
@@ -161,7 +161,7 @@
     (the directory structure of the source files is reflected in
     the index).  The default is `tree'.
 
-    Thanks to Sebastian Rose for the patch.
+    Thanks to Manuel Hermenegildo for the patch.
 
 * Version 6.05
 
