--- a/Changes.org
+++ b/Changes.org
@@ -10,10 +10,20 @@
 #+LINK_UP: index.html
 #+LINK_HOME: http://orgmode.org
 
-* Version 6.06
+* Version 6.07 (in preparation)
 :PROPERTIES:
 :VISIBILITY: content
 :END:
+
+** Details
+
+** It is now possible to define filters for column view
+   The filter can modify the value that will be displayed in a
+   column, for example it can cut out a part of a time stamp.
+   For more information, look at the variable
+   =org-columns-modify-value-for-display-function=.
+
+* Version 6.06
 
 ** Overview
 
