New face `org-scheduled'
This face is used in the agenda for entries that are
scheduled on a day that is not today.

--- a/Changes.org
+++ b/Changes.org
@@ -16,6 +16,8 @@
 :END:
 
 ** Details
+*** New face =org-scheduled= for entries that at some time in the future.
+    This was a request by Richard G Rigley.
 *** Remember templates for gnus links can now use the :to escape.
     Thanks to Tommy Lindgren for a patch to this effect.
 *** The file specification in a remember template may now be a function
