--- a/Changes.org
+++ b/Changes.org
@@ -15,7 +15,35 @@
 :VISIBILITY: content
 :END:
 
+* Incompatible changes
+*** Prefix interpretation when storing remember notes
+    The prefix argument to the `C-c C-c' command that finishes a
+    remember process is not interpetred differently:
+
+    :C-c C-c       Store the note to predefined file and headline
+    :C-1 C-c C-c   Select the storage location interactively
+    :C-0 C-c C-c   Re-use the last used location
+    :C-u C-c C-c   Like C-c C-c, but immediately visit the note
+    :              in its new location.
+
+    This was requested by John Wiegley.
+
+
 ** Details
+
+*** New interpretation of prefix arguments when exiting remember
+    The prefix argument to the `C-c C-c' command that finishes a
+    remember process is not interpetred differently:
+
+    :C-c C-c       Store the note to predefined file and headline
+    :C-1 C-c C-c   Select the storage location interactively
+    :C-0 C-c C-c   Re-use the last used location
+    :C-u C-c C-c   Like C-c C-c, but immediately visit the note
+    :              in its new location.
+
+    This was requested by John Wiegley.
+
+
 *** New face =org-scheduled= for entries that at some time in the future.
     This was a request by Richard G Rigley.
 *** Remember templates for gnus links can now use the :to escape.
